# patient-triage-env

./: .env  Dockerfile  README.md  app.py  data.py  dockerfile  environment.py  inference.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt  tasks.py
patient_triage_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
patient_triage_env/server/: Dockerfile  patient_triage_env_environment.py
server/: __init__.py  app.py
